--- a/eco-track-frontend/package.json
+++ b/eco-track-frontend/package.json
@@ -20,11 +20,14 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "bootstrap": "^5.3.3",
+    "lucide-vue-next": "^0.484.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.17",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.9",
@@ -34,6 +37,7 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "cypress": "^14.1.0",
     "eslint": "^9.21.0",
     "eslint-plugin-cypress": "^4.2.0",
@@ -43,8 +47,10 @@
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.15.13",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
     "start-server-and-test": "^2.0.10",
+    "tailwindcss": "^4.0.17",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
