--- a/eco-track-frontend/package.json
+++ b/eco-track-frontend/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "lucide-vue-next": "^0.484.0",
