--- a/eco_track/composer.json
+++ b/eco_track/composer.json
@@ -8,8 +8,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/socialite": "^5.19",
         "laravel/tinker": "^2.10.1",
-        "tymon/jwt-auth": "^2.2"
+        "php-open-source-saver/jwt-auth": "2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
