krijimi i admin dashboard,user dashboard dhe fileve te tjere per raporte dhe shtim te mbeturinqve dhe krijimi i migrations ne databaze

--- a/eco-track-frontend/package.json
+++ b/eco-track-frontend/package.json
@@ -19,13 +19,20 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.9",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-vue-next": "^0.484.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.17",
